fixing spacing

--- a/samples/src/components/Fiddle/css/Fiddle.less
+++ b/samples/src/components/Fiddle/css/Fiddle.less
@@ -1,7 +1,8 @@
 .fiddle {
   width: 75%;
   margin: 0 auto;
-  height: 90vh;
+  margin-top: 10px;
+  height: 85vh;
   display: block;
 
 }
